--- a/events/css/style.css
+++ b/events/css/style.css
@@ -1,182 +1,677 @@
-.podcast-links {
-  display: flex;
-  gap: 50px;
-}
-.podcast-links .podcast-icons {
-  width: 40px;
+
+*,
+*::before,
+*::after{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.blog-card {
-  display: flex;
-  flex-direction: column;
-  margin: 1rem auto;
-  box-shadow: 0 3px 7px -1px rgba(0, 0, 0, 0.1);
-  margin-bottom: 5.6%;
-  background: #fff;
-  line-height: 1.4;
-  font-family: sans-serif;
-  border-radius: 5px;
-  overflow: hidden;
-  z-index: 0;
+html{
+  font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 10px;
 }
-.blog-card a {
-  color: inherit;
+
+body , html {
+  overflow-x: hidden;
 }
-.blog-card a:hover {
-  color: #5ad67d;
+
+::-webkit-scrollbar-track {
+  background-color: #ffffff;
 }
-.blog-card:hover .photo {
-  filter: grayscale(0%);
-  transition: 500ms;
+
+::-webkit-scrollbar {
+  width: 10px;
+  background-color: #f5f5f5;
 }
-.blog-card .meta {
-  position: relative;
-  z-index: 0;
-  height: 200px;
+
+::-webkit-scrollbar-thumb {
+  background-color: #c9c8c8;
+  border-radius: 1rem;
 }
-.blog-card .photo {
-  filter: grayscale(100%);
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  background-size: cover;
-  background-position: center;
-  transition: transform 0.2s;
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #b3b2b2;
 }
-.blog-card .details,
-.blog-card .details ul {
-  margin: auto;
-  padding: 0;
-  list-style: none;
-}
-.blog-card .details {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: -100%;
-  margin: auto;
-  transition: left 0.2s;
-  background: rgba(0, 0, 0, 0.6);
-  color: #fff;
-  padding: 10px;
+
+.hero{
   width: 100%;
-  font-size: 0.9rem;
-}
-.blog-card .details a {
-  -webkit-text-decoration: dotted underline;
-          text-decoration: dotted underline;
-}
-.blog-card .details ul li {
-  display: inline-block;
-}
-.blog-card .details .author:before {
-  font-family: FontAwesome;
-  margin-right: 10px;
-  content: "\f007";
-}
-.blog-card .details .date:before {
-  font-family: FontAwesome;
-  margin-right: 10px;
-  content: "\f133";
-}
-.blog-card .details .tags ul:before {
-  font-family: FontAwesome;
-  content: "\f02b";
-  margin-right: 10px;
-}
-.blog-card .details .tags li {
-  margin-right: 2px;
-}
-.blog-card .details .tags li:first-child {
-  margin-left: -4px;
-}
-.blog-card .description {
-  padding: 1.5rem;
-  background: #fff;
+  height: 100vh;
+  background-image: linear-gradient(rgba(12, 3, 51, 0),rgba(241, 241, 241, 1));
   position: relative;
   display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  z-index: 1;
+  align-items: center;
+  justify-content: center;
 }
-.blog-card .description h1,
-.blog-card .description h2 {
-  font-family: Poppins, sans-serif;
+
+.hero img{
+  width: 80vh;
+  height: 80vh;
 }
-.blog-card .description h1 {
-  line-height: 1;
-  margin: 0;
-  font-size: 1.7rem;
+
+.content{
+  text-align: center;
 }
-.blog-card .description h2 {
-  font-size: 1rem;
-  font-weight: 300;
-  text-transform: uppercase;
-  color: #a2a2a2;
-  margin-top: 5px;
+.content h1{
+  font-size: 140px;
+  color: #fff;
+  font-weight: 600;
+  transition: 0.5s;
 }
-.blog-card .description .read-more {
-  text-align: right;
+.content h1:hover{
+  -webkit-text-stroke: 2px #fff;
+  color: transparent;
 }
-.blog-card .description .read-more a {
-  color: #5ad67d;
-  display: inline-block;
-  position: relative;
-}
-.blog-card p {
-  position: relative;
-  margin: 1rem 0 0;
-}
-.blog-card p:first-of-type {
-  margin-top: 1.25rem;
-}
-.blog-card p:first-of-type:before {
-  content: "";
+
+
+.collage{ 
   position: absolute;
-  height: 5px;
-  background: #5ad67d;
-  width: 35px;
-  top: -0.75rem;
-  border-radius: 3px;
+	top: 50%;
+	left: 50%;
+	min-width: 100%;
+	min-height: 100%;
+	width: auto;
+	height: auto;
+	z-index: -2;
+  filter: brightness(60%);
+	transform: translateX(-50%) translateY(-50%);      
 }
-.blog-card:hover .details {
-  left: 0%;
+
+@media screen and (max-width:768px){
+  .content h1 {
+    font-size: 800%;
+  }
+  
 }
-@media (min-width: 640px) {
-  .blog-card {
-    flex-direction: row;
-    max-width: 1200px;
-    min-height: 400px;
+
+
+
+.event3 {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0 1.5rem;
+  background-color: #F1F1F1;
+  margin-top: 8rem;
+  margin-bottom: 8rem;
+}
+
+.FoodFiesta{
+  width: 100%;
+  max-width: 98rem;
+  padding: 5rem;
+  background-image: linear-gradient(to right,#f82f2f 0%, #af0202 90%);
+  box-shadow: 0 1.4rem 8rem rgba(0,0,0,.2);
+  display: flex;
+  align-items: center;
+  border-radius: 3rem;
+}
+
+.FoodFiesta_img{
+  min-width: 35rem;
+  max-width: 35rem;
+  height: 30rem;
+  transform: translateX(-8rem);
+  position: relative;
+}
+
+.FoodFiesta_img img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+  border-radius: 1.5rem;
+}
+
+.FoodFiesta_img::before{
+  content: '';
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  box-shadow: .5rem .5rem 3rem 1px rgba(0, 0, 0, 0.05);
+  border-radius: 8rem;
+}
+
+.FoodFiesta_info p{
+  display: block;
+  color: rgb(255, 255, 255);
+  font-size: 2rem;
+  font-weight: 300;
+  margin: .5rem 0;
+}
+
+.FoodFiesta_title{
+  font-size: 5.5rem;
+  font-weight: 600;
+  margin: 1.5rem 0 2rem;
+  text-transform: uppercase;
+  color: #fefe00;
+}
+
+.FoodFiesta_cta{
+  display: inline-block;
+  padding: 1.5rem 3rem;
+  margin-top: 20px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  font-size: 1.5rem;
+  font:bold;
+  color: whitesmoke;
+  background-color:black;
+  border-radius: .8rem;
+}
+
+.FoodFiesta_cta:hover{
+  background-image:linear-gradient(to right,#af0202 0%, #f82f2f 90%);
+  color: whitesmoke;
+}
+
+@media screen and (max-width:1068px){
+  .FoodFiesta{
+    max-width: 80rem;
   }
-  .blog-card .meta {
-    flex-basis: 40%;
-    height: auto;
+
+  .FoodFiesta_img{
+    min-width: 30rem;
+    max-width: 30rem;
   }
-  .blog-card .description {
-    flex-basis: 60%;
+}
+
+@media screen and (max-width:868px){
+  .FoodFiesta{
+   max-width: 70rem;
   }
-  .blog-card .description:before {
-    transform: skewX(-3deg);
-    content: "";
-    background: #fff;
-    width: 30px;
-    position: absolute;
-    left: -10px;
-    top: 0;
-    bottom: 0;
-    z-index: -1;
+}
+
+@media screen and (max-width:768px){
+  .FoodFiesta{
+   padding: 2.5rem;
+   flex-direction: column;
   }
-  .blog-card.alt {
-    flex-direction: row-reverse;
+
+  .FoodFiesta_img{
+    min-width: 100%;
+    max-width: 100%;
+    transform: translate(0,-8rem);
   }
-  .blog-card.alt .description:before {
-    left: inherit;
-    right: -10px;
-    transform: skew(3deg);
+  
+  .FoodFiesta_title{
+    font-size: 2.8rem;
+    margin: .5rem 0 .2rem;
   }
-  .blog-card.alt .details {
-    padding-left: 25px;
+
+  .FoodFiesta_info p{
+    font-size: 1.6rem;
+    font-weight: 600;
   }
-}/*# sourceMappingURL=style.css.map */
+}
+
+
+.event2 {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0 1.5rem;
+  background-color: #F1F1F1;
+  margin-top: 8rem;
+  margin-bottom: 8rem;
+}
+
+.sharktank{
+  width: 100%;
+  max-width: 98rem;
+  padding: 5rem;
+  background-image: linear-gradient(to right,#71c5ee 0%, #08375e 100%);
+  box-shadow: 0 1.4rem 8rem rgba(0,0,0,.2);
+  display: flex;
+  align-items: center;
+  border-radius: 3rem;
+}
+
+.sharktank_img{
+  min-width: 35rem;
+  max-width: 35rem;
+  height: 30rem;
+  transform: translateX(-8rem);
+  position: relative;
+}
+
+.sharktank_img img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+  border-radius: 1.5rem;
+  background-color: rgb(3, 5, 59)
+}
+
+.sharktank_img::before{
+  content: '';
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  box-shadow: .5rem .5rem 3rem 1px rgba(0, 0, 0, 0.05);
+  border-radius: 8rem;
+}
+
+.sharktank_info p{
+  display: block;
+  color: rgb(255, 255, 255);
+  font-size: 2rem;
+  font-weight: 300;
+  margin: .5rem 0;
+}
+
+.sharktank_title{
+  font-size: 5.5rem;
+  margin: 1.5rem 0 2rem;
+  font-weight: 600;
+  text-transform: uppercase;
+  color: #f3e039;
+}
+
+
+.sharktank_cta{
+  display: inline-block;
+  padding: 1.5rem 3rem;
+  margin-top: 20px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  font-size: 1.5rem;
+  font:bold;
+  color: whitesmoke;
+  background-color:black;
+  border-radius: .8rem;
+}
+
+.sharktank_cta:hover{
+  background-image:linear-gradient(to right,#025091 0%, #71c5ee 90%); 
+  color: whitesmoke;
+}
+
+@media screen and (max-width:1068px){
+  .sharktank{
+    max-width: 80rem;
+  }
+
+  .sharktank_img{
+    min-width: 30rem;
+    max-width: 30rem;
+  }
+}
+
+@media screen and (max-width:868px){
+  .sharktank{
+   max-width: 70rem;
+  }
+}
+
+@media screen and (max-width:768px){
+  .sharktank{
+   padding: 2.5rem;
+   flex-direction: column;
+  }
+
+  .sharktank_img{
+    min-width: 100%;
+    max-width: 100%;
+    transform: translate(0,-8rem);
+  }
+  
+  .sharktank_title{
+    font-size: 2.8rem;
+    margin: .5rem 0 .2rem;
+  }
+
+  .sharktank_info p{
+    font-size: 1.6rem;
+    font-weight: 600;
+  }
+}
+
+
+
+.event1 {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0 1.5rem;
+  background-color: #F1F1F1;
+  margin-top: 8rem;
+  margin-bottom: 8rem;
+}
+
+.podcast{
+  width: 100%;
+  max-width: 98rem;
+  padding: 5rem;
+  background-image: linear-gradient(to right,#94fd53 0%, #035637 100%);
+  box-shadow: 0 1.4rem 8rem rgba(0,0,0,.2);
+  display: flex;
+  align-items: center;
+  border-radius: 3rem;
+}
+
+.podcast_img{
+  min-width: 35rem;
+  max-width: 35rem;
+  height: 30rem;
+  transform: translateX(-8rem);
+  position: relative;
+}
+
+.podcast_img img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+  border-radius: 1.5rem;
+}
+
+.podcast_img::before{
+  content: '';
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  box-shadow: .5rem .5rem 3rem 1px rgba(0, 0, 0, 0.05);
+  border-radius: 8rem;
+}
+
+.podcast_info p{
+  display: block;
+  color: rgb(255, 255, 255);
+  font-size: 2rem;
+  font-weight: 300;
+  margin: .5rem 0;
+}
+
+.podcast_title{
+  font-size: 5.5rem;
+  margin: 1.5rem 0 2rem;
+  text-transform: uppercase;
+  color: #f3e039;
+  font-weight: 600;
+}
+
+
+.podcast_cta{
+  display: inline-block;
+  padding: 1.5rem 3rem;
+  margin-top: 20px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  font-size: 1.5rem;
+  font:bold;
+  color: whitesmoke;
+  background-color:black;
+  border-radius: .8rem;
+}
+
+.podcast_cta:hover{
+  background-image:linear-gradient(to right, #035637 0%, #94fd53  90%); 
+  color: whitesmoke;
+}
+
+@media screen and (max-width:1068px){
+  .podcast{
+    max-width: 80rem;
+  }
+
+  .podcast_img{
+    min-width: 30rem;
+    max-width: 30rem;
+  }
+}
+
+@media screen and (max-width:868px){
+  .podcast{
+   max-width: 70rem;
+  }
+}
+
+@media screen and (max-width:768px){
+  .podcast{
+   padding: 2.5rem;
+   flex-direction: column;
+  }
+
+  .podcast_img{
+    min-width: 100%;
+    max-width: 100%;
+    transform: translate(0,-8rem);
+  }
+  
+  .podcast_title{
+    font-size: 2.8rem;
+    margin: .5rem 0 .2rem;
+  }
+
+  .podcast_info p{
+    font-size: 1.6rem;
+    font-weight: 600;
+  }
+}
+
+
+
+.event4 {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0 1.5rem;
+  background-color: #F1F1F1;
+  margin-top: 8rem;
+  margin-bottom: 8rem;
+}
+
+.women{
+  width: 100%;
+  max-width: 98rem;
+  padding: 5rem;
+  background-image: linear-gradient(to right,#90d8ff 0%, #c82339 80%);
+  box-shadow: 0 1.4rem 8rem rgba(0,0,0,.2);
+  display: flex;
+  align-items: center;
+  border-radius: 3rem;
+}
+
+.women_img{
+  min-width: 35rem;
+  max-width: 35rem;
+  height: 30rem;
+  transform: translateX(-8rem);
+  position: relative;
+}
+
+.women_img img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+  border-radius: 1.5rem;
+}
+
+.women_img::before{
+  content: '';
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  box-shadow: .5rem .5rem 3rem 1px rgba(0, 0, 0, 0.05);
+  border-radius: 8rem;
+}
+
+.women_info p{
+  display: block;
+  color: rgb(255, 255, 255);
+  font-size: 2rem;
+  font-weight: 300;
+  margin: .5rem 0;
+}
+
+.women_title{
+  font-size: 4.5rem;
+  margin: 1.5rem 0 2rem;
+  text-transform: uppercase;
+  color: #f3e039;
+  font-weight: 600;
+}
+
+
+@media screen and (max-width:1068px){
+  .women{
+    max-width: 80rem;
+  }
+
+  .women_img{
+    min-width: 30rem;
+    max-width: 30rem;
+  }
+}
+
+@media screen and (max-width:868px){
+  .women{
+   max-width: 70rem;
+  }
+}
+
+@media screen and (max-width:768px){
+  .women{
+   padding: 2.5rem;
+   flex-direction: column;
+  }
+
+  .women_img{
+    min-width: 100%;
+    max-width: 100%;
+    transform: translate(0,-8rem);
+  }
+
+  .women_title{
+    font-size: 2.8rem;
+    margin: .5rem 0 .2rem;
+  }
+
+  .women_info p{
+    font-size: 1.6rem;
+    font-weight: 600;
+  }
+}
+
+
+
+.event5 {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0 1.5rem;
+  background-color: #F1F1F1;
+  margin-top: 8rem;
+  margin-bottom: 8rem;
+}
+
+.beach{
+  width: 100%;
+  max-width: 98rem;
+  padding: 5rem;
+  background-image: linear-gradient(to right,#62dede 0%, #095454 100%);
+  box-shadow: 0 1.4rem 8rem rgba(0,0,0,.2);
+  display: flex;
+  align-items: center;
+  border-radius: 3rem;
+}
+
+.beach_img{
+  min-width: 35rem;
+  max-width: 35rem;
+  height: 30rem;
+  transform: translateX(-8rem);
+  position: relative;
+}
+
+.beach_img img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+  border-radius: 1.5rem;
+}
+
+.beach_img::before{
+  content: '';
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  box-shadow: .5rem .5rem 3rem 1px rgba(0, 0, 0, 0.05);
+  border-radius: 8rem;
+}
+
+.beach_info p{
+  display: block;
+  color: rgb(255, 255, 255);
+  font-size: 2rem;
+  font-weight: 300;
+  margin: .5rem 0;
+}
+
+.beach_title{
+  font-size: 4.5rem;
+  margin: 1.5rem 0 2rem;
+  text-transform: uppercase;
+  color: #f3e039;
+  font-weight: 600;
+}
+
+@media screen and (max-width:1068px){
+  .beach{
+    max-width: 80rem;
+  }
+
+  .beach_img{
+    min-width: 30rem;
+    max-width: 30rem;
+  }
+}
+
+@media screen and (max-width:868px){
+  .beach{
+   max-width: 70rem;
+  }
+}
+
+@media screen and (max-width:768px){
+  .beach{
+   padding: 2.5rem;
+   flex-direction: column;
+  }
+
+  .beach_img{
+    min-width: 100%;
+    max-width: 100%;
+    transform: translate(0,-8rem);
+  }
+
+  .beach_title{
+    font-size: 2.8rem;
+    margin: .5rem 0 .2rem;
+  }
+
+  .beach_info p{
+    font-size: 1.6rem;
+    font-weight: 600;
+  }
+}
