--- a/events/css/style.css
+++ b/events/css/style.css
@@ -461,6 +461,24 @@ body , html {
   }
 }
 
+.hed{
+  width: 100%;
+  height: 30vh;
+  display: grid;
+  place-items: center;
+  background-image: linear-gradient(to right,#1c0e53 0%, #74299f 80%);
+}
+
+.hed h1{
+color: #fff;
+font-size: 8rem;
+}
+
+@media screen and (max-width:768px){
+.hed h1{
+  font-size: 400%;
+}
+}
 
 
 .event4 {
