event page updated

--- a/events/css/style.css
+++ b/events/css/style.css
@@ -37,11 +37,12 @@ body , html {
 .hero{
   width: 100%;
   height: 100vh;
-  background-image: linear-gradient(rgba(12, 3, 51, 0),rgba(241, 241, 241, 1));
+  background-image: linear-gradient(rgba(12,3,51,0.3),rgba(241, 241, 241, 1) 100%);
   position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-bottom: 18rem;
 }
 
 .hero img{
@@ -54,14 +55,15 @@ body , html {
 }
 .content h1{
   font-size: 140px;
-  color: #fff;
+  color: rgb(0, 0, 0);
+  background-color: rgba(255, 253, 253, 0.538);
+  background-size: 90rem;
+  box-shadow: black;
+  padding: 2rem 2rem 2rem 2rem;
   font-weight: 600;
-  transition: 0.5s;
+  transition: 0.9s;
 }
-.content h1:hover{
-  -webkit-text-stroke: 2px #fff;
-  color: transparent;
-}
+
 
 
 .collage{ 
@@ -93,13 +95,15 @@ body , html {
   justify-content: center;
   padding: 0 1.5rem;
   background-color: #F1F1F1;
-  margin-top: 8rem;
+  margin-top: 18rem;
   margin-bottom: 8rem;
 }
 
+
+
 .FoodFiesta{
   width: 100%;
-  max-width: 98rem;
+  max-width: 130rem;
   padding: 5rem;
   background-image: linear-gradient(to right,#f82f2f 0%, #af0202 90%);
   box-shadow: 0 1.4rem 8rem rgba(0,0,0,.2);
@@ -223,7 +227,7 @@ body , html {
 
 .sharktank{
   width: 100%;
-  max-width: 98rem;
+  max-width: 130rem;
   padding: 5rem;
   background-image: linear-gradient(to right,#71c5ee 0%, #08375e 100%);
   box-shadow: 0 1.4rem 8rem rgba(0,0,0,.2);
@@ -235,7 +239,7 @@ body , html {
 .sharktank_img{
   min-width: 35rem;
   max-width: 35rem;
-  height: 30rem;
+  height: 35rem;
   transform: translateX(-8rem);
   position: relative;
 }
@@ -350,7 +354,7 @@ body , html {
 
 .podcast{
   width: 100%;
-  max-width: 98rem;
+  max-width: 130rem;
   padding: 5rem;
   background-image: linear-gradient(to right,#94fd53 0%, #035637 100%);
   box-shadow: 0 1.4rem 8rem rgba(0,0,0,.2);
@@ -494,7 +498,7 @@ font-size: 8rem;
 
 .women{
   width: 100%;
-  max-width: 98rem;
+  max-width: 130rem;
   padding: 5rem;
   background-image: linear-gradient(to right,#90d8ff 0%, #c82339 80%);
   box-shadow: 0 1.4rem 8rem rgba(0,0,0,.2);
@@ -602,7 +606,7 @@ font-size: 8rem;
 
 .beach{
   width: 100%;
-  max-width: 98rem;
+  max-width: 130rem;
   padding: 5rem;
   background-image: linear-gradient(to right,#62dede 0%, #095454 100%);
   box-shadow: 0 1.4rem 8rem rgba(0,0,0,.2);
