--- a/events/css/style.css
+++ b/events/css/style.css
@@ -105,7 +105,7 @@ body , html {
   width: 100%;
   max-width: 130rem;
   padding: 5rem;
-  background-image: linear-gradient(to right,#f82f2f 0%, #af0202 90%);
+  background-image: linear-gradient(to right,#f82f2f 0%, #800000 70%);
   box-shadow: 0 1.4rem 8rem rgba(0,0,0,.2);
   display: flex;
   align-items: center;
