--- a/events/css/style.css
+++ b/events/css/style.css
@@ -37,7 +37,7 @@ body , html {
 .hero{
   width: 100%;
   height: 100vh;
-  background-image: linear-gradient(rgba(12,3,51,0.3),rgba(241, 241, 241, 1) 100%);
+  background-image: linear-gradient(rgba(255, 255, 255, 0) 80%,rgba(241, 241, 241, 1) 100%);
   position: relative;
   display: flex;
   align-items: center;
@@ -52,16 +52,24 @@ body , html {
 
 .content{
   text-align: center;
+  padding: 3rem 4rem;
+  background-color: rgba(255, 253, 253, 1);
+}
+
+.content img{
+  width: 60px;
+  height: 60px;
 }
 .content h1{
-  font-size: 140px;
-  color: rgb(0, 0, 0);
-  background-color: rgba(255, 253, 253, 0.538);
-  background-size: 90rem;
-  box-shadow: black;
-  padding: 2rem 2rem 2rem 2rem;
-  font-weight: 600;
+  font-size: 50px;
+  color: #035637;
+  /* box-shadow: black; */
+  font-weight: bold;
   transition: 0.9s;
+}
+.content h3{
+  font-size: 40px;
+  color: #fe00d4;
 }
 
 
@@ -75,8 +83,8 @@ body , html {
 	width: auto;
 	height: auto;
 	z-index: -2;
-  filter: brightness(60%);
-	transform: translateX(-50%) translateY(-50%);      
+	transform: translateX(-50%) translateY(-50%); 
+  filter: saturate(2);     
 }
 
 @media screen and (max-width:768px){
