event section collage

--- a/events/css/style.css
+++ b/events/css/style.css
@@ -50,26 +50,14 @@ body , html {
   height: 80vh;
 }
 
-.content{
-  text-align: center;
-  padding: 3rem 4rem;
-  background-color: rgba(255, 253, 253, 1);
-}
-
-.content img{
-  width: 60px;
-  height: 60px;
-}
-.content h1{
-  font-size: 50px;
-  color: #035637;
-  /* box-shadow: black; */
-  font-weight: bold;
-  transition: 0.9s;
-}
 .content h3{
-  font-size: 40px;
-  color: #fe00d4;
+  font-size: 140px;
+  color: black;
+  background-color: rgba(255, 253, 253, 0.89);
+  background-size: 90rem;
+  box-shadow: black;
+  padding: 2rem 2rem 2rem 2rem;
+  font-weight: 600;
 }
 
 
