--- a/events/css/style.css
+++ b/events/css/style.css
@@ -33,10 +33,14 @@ body , html {
 ::-webkit-scrollbar-thumb:hover {
   background-color: #b3b2b2;
 }
+/* overriding common nav css  */
+nav{
+  position: fixed;
+}
 
 .hero{
   width: 100%;
-  height: 100vh;
+  height: 105vh;
   background-image: linear-gradient(rgba(255, 255, 255, 0) 80%,rgba(241, 241, 241, 1) 100%);
   position: relative;
   display: flex;
@@ -58,6 +62,14 @@ body , html {
   box-shadow: black;
   padding: 2rem 2rem 2rem 2rem;
   font-weight: 600;
+}
+
+@media screen and (max-width: 600px) {
+  .content h3{
+    font-size: 60px;
+
+  }
+  
 }
 
 
