--- a/podcast/assets/css/style.scss
+++ b/podcast/assets/css/style.scss
@@ -1,6 +1,3 @@
-@import "./reset";
-@import "./nav";
-@import "./footer";
 
 .section {
   height: 100%;
@@ -437,12 +434,14 @@ header .container {
   #PODCAST
 \*-----------------------------------*/
 
-.podcast { padding: var(--section-padding) 0; }
+// .podcast { padding: var(--section-padding) 0; }
 
 .podcast-list {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: center;
   gap: 30px;
+  margin-bottom: 40px;
 }
 
 .podcast-card { border-radius: 4px; }
@@ -789,13 +788,6 @@ header .container {
    * PODCAST
    */
 
-  .podcast-list{
-    display: flex;
-    flex-wrap: wrap;
-    gap: 30px;
-  }
-
-
 
   /**
    * NEWSLETTER
@@ -941,13 +933,6 @@ header .container {
    * PODCAST
    */
 
-  .podcast-list{
-    display: flex;
-    flex-wrap: wrap;
-    gap: 30px;
-  }
-
-
 
   /**
    * NEWSLETTER
@@ -1057,32 +1042,34 @@ header .container {
    * PODCAST
    */
 
-  .podcast-list{
-    display: flex;
-    flex-wrap: wrap;
-    gap: 30px;
+   .platform-title{
+    font-size: 70px;
+    color: #fff;
+    font-weight: 500;
+    text-align: center;
+    margin-bottom: 30px;
+    margin-top: 60px;
   }
-
-
+  
 
   /**
    * FOOTER
    */
 
-  .footer-link-title {
-    --fs-2: 22px;
-    margin-bottom: 30px;
-  }
+  // .footer-link-title {
+  //   --fs-2: 22px;
+  //   margin-bottom: 30px;
+  // }
 
-  .social-title {
-    margin-left: auto;
-    margin-bottom: 35px;
-  }
+  // .social-title {
+  //   margin-left: auto;
+  //   margin-bottom: 35px;
+  // }
 
-  .social-link {
-    width: 45px;
-    height: 45px;
-    font-size: 22px;
-  }
+  // .social-link {
+  //   width: 45px;
+  //   height: 45px;
+  //   font-size: 22px;
+  // }
 
 }
