--- a/podcast/assets/css/style.css
+++ b/podcast/assets/css/style.css
@@ -415,6 +415,20 @@ header .container {
 /*-----------------------------------*\
   #PODCAST
 \*-----------------------------------*/
+.amazon-logo {
+  height: 15px;
+  width: 15px;
+}
+
+.platform-title {
+  font-size: 30px;
+  color: #fff;
+  font-weight: 500;
+  text-align: center;
+  margin-bottom: 30px;
+  margin-top: 60px;
+}
+
 .podcast-list {
   display: flex;
   flex-direction: column;
@@ -425,6 +439,7 @@ header .container {
 
 .podcast-card {
   border-radius: 4px;
+  width: 100%;
 }
 
 .card-banner {
@@ -772,6 +787,14 @@ header .container {
   /**
    * PODCAST
    */
+  .spoti-iframe {
+    width: 525px;
+    height: 300px;
+  }
+  .yt-iframe {
+    width: 525px;
+    height: 300px;
+  }
   /**
    * NEWSLETTER
    */
@@ -897,6 +920,14 @@ header .container {
   /**
    * PODCAST
    */
+  .spoti-iframe {
+    width: 725px;
+    height: 350px;
+  }
+  .yt-iframe {
+    width: 725px;
+    height: 300px;
+  }
   /**
    * NEWSLETTER
    */
@@ -985,13 +1016,13 @@ header .container {
   /**
    * PODCAST
    */
-  .platform-title {
-    font-size: 70px;
-    color: #fff;
-    font-weight: 500;
-    text-align: center;
-    margin-bottom: 30px;
-    margin-top: 60px;
+  .spoti-iframe {
+    width: 825px;
+    height: 350px;
+  }
+  .yt-iframe {
+    width: 825px;
+    height: 400px;
   }
   /**
    * FOOTER
