--- a/podcast/assets/css/style.scss
+++ b/podcast/assets/css/style.scss
@@ -436,6 +436,20 @@ header .container {
 
 // .podcast { padding: var(--section-padding) 0; }
 
+.amazon-logo{
+  height: 15px;
+  width: 15px;
+}
+
+.platform-title{
+  font-size: 30px;
+  color: #fff;
+  font-weight: 500;
+  text-align: center;
+  margin-bottom: 30px;
+  margin-top: 60px;
+}
+
 .podcast-list {
   display: flex;
   flex-direction: column;
@@ -444,7 +458,10 @@ header .container {
   margin-bottom: 40px;
 }
 
-.podcast-card { border-radius: 4px; }
+.podcast-card { 
+  border-radius: 4px;
+  width: 100%; 
+}
 
 .card-banner {
   position: relative;
@@ -520,7 +537,6 @@ header .container {
 }
 
 .podcast-card:is(:hover, :focus) .card-title { background-size: 100% 2px; }
-
 
 
 
@@ -788,6 +804,16 @@ header .container {
    * PODCAST
    */
 
+  .spoti-iframe{
+    width: 525px;
+    height: 300px;
+  }
+
+  .yt-iframe{
+    width: 525px;
+    height: 300px;
+  }
+
 
   /**
    * NEWSLETTER
@@ -933,6 +959,16 @@ header .container {
    * PODCAST
    */
 
+   .spoti-iframe{
+    width: 725px;
+    height: 350px;
+  }
+
+  .yt-iframe{
+    width: 725px;
+    height: 300px;
+  }
+
 
   /**
    * NEWSLETTER
@@ -1042,14 +1078,16 @@ header .container {
    * PODCAST
    */
 
-   .platform-title{
-    font-size: 70px;
-    color: #fff;
-    font-weight: 500;
-    text-align: center;
-    margin-bottom: 30px;
-    margin-top: 60px;
+   .spoti-iframe{
+    width: 825px;
+    height: 350px;
   }
+
+  .yt-iframe{
+    width: 825px;
+    height: 400px;
+  }
+
   
 
   /**
