--- a/events/css/style.css
+++ b/events/css/style.css
@@ -57,7 +57,7 @@ nav{
 .content h3{
   font-size: 140px;
   color: black;
-  background-color: rgba(255, 253, 253, 0.795);
+  background-color: rgba(255, 253, 253, 0.932);
   background-size: 90rem;
   box-shadow: black;
   padding: 2rem 2rem 2rem 2rem;
@@ -104,7 +104,7 @@ nav{
   padding: 0 1.5rem;
   background-color: #F1F1F1;
   margin-top: 8rem;
-  margin-bottom: 8rem;
+  margin-bottom: 18rem;
 }
 
 
@@ -206,24 +206,29 @@ nav{
 
 @media screen and (max-width:768px){
   .FoodFiesta{
-   padding: 2.5rem;
+   padding: 2rem;
    flex-direction: column;
   }
 
   .FoodFiesta_img{
+    min-width: 80%;
+    max-width: 80%;
+    height: 80%;
+  }  
+  .FoodFiesta_img{
     min-width: 100%;
     max-width: 100%;
-    transform: translate(0,-8rem);
+    transform: translate(0,-6rem);
   }
   
   .FoodFiesta_title{
     font-size: 2.8rem;
-    margin: .5rem 0 .2rem;
+    margin: .1rem 0 .1rem;
   }
 
   .FoodFiesta_info p{
-    font-size: 1.6rem;
-    font-weight: 600;
+    font-size: 130%;
+    font-weight: 200;
   }
 }
 
@@ -236,7 +241,7 @@ nav{
   padding: 0 1.5rem;
   background-color: #F1F1F1;
   margin-top: 8rem;
-  margin-bottom: 8rem;
+  margin-bottom: 18rem;
 }
 
 .sharktank{
@@ -261,10 +266,11 @@ nav{
 .sharktank_img img{
   width: 100%;
   height: 100%;
+  padding: 3rem 3rem 3rem 3rem;
   object-fit: cover;
   display: block;
   border-radius: 1.5rem;
-  background-color: rgb(1, 0, 0)
+  background-color: rgb(255, 255, 255)
 }
 
 .sharktank_img::before{
@@ -339,26 +345,38 @@ nav{
 
 @media screen and (max-width:768px){
   .sharktank{
-   padding: 2.5rem;
-   flex-direction: column;
+    padding: 2rem;
+    flex-direction: column;
+   }
+ 
+   .sharktank_img{
+     min-width: 80%;
+     max-width: 80%;
+     height: 80%;
+   }  
+
+   .sharktank_img::before{
+    width: 100%;
+    height: 100%;
+    border-radius: 1.5rem;
   }
 
-  .sharktank_img{
-    min-width: 100%;
-    max-width: 100%;
-    transform: translate(0,-8rem);
-  }
-  
-  .sharktank_title{
-    font-size: 2.8rem;
-    margin: .5rem 0 .2rem;
-  }
-
-  .sharktank_info p{
-    font-size: 1.6rem;
-    font-weight: 600;
-  }
-}
+   .sharktank_img{
+     min-width: 100%;
+     max-width: 100%;
+     transform: translate(0,-6rem);
+   }
+   
+   .sharktank_title{
+     font-size: 2.8rem;
+     margin: .1rem 0 .1rem;
+   }
+ 
+   .sharktank_info p{
+     font-size: 130%;
+     font-weight: 200;
+   }
+ }
 
 
 
@@ -370,7 +388,7 @@ nav{
   padding: 0 1.5rem;
   background-color: #F1F1F1;
   margin-top: 8rem;
-  margin-bottom: 8rem;
+  margin-bottom: 18rem;
 }
 
 .podcast{
@@ -472,26 +490,33 @@ nav{
 
 @media screen and (max-width:768px){
   .podcast{
-   padding: 2.5rem;
-   flex-direction: column;
-  }
+    padding: 2rem;
+    flex-direction: column;
+   }
+ 
+   .podcast_img{
+     min-width: 80%;
+     max-width: 80%;
+     height: 80%;
+   }  
 
-  .podcast_img{
-    min-width: 100%;
-    max-width: 100%;
-    transform: translate(0,-8rem);
-  }
-  
-  .podcast_title{
-    font-size: 2.8rem;
-    margin: .5rem 0 .2rem;
-  }
-
-  .podcast_info p{
-    font-size: 1.6rem;
-    font-weight: 600;
-  }
-}
+   
+   .podcast_img{
+     min-width: 100%;
+     max-width: 100%;
+     transform: translate(0,-6rem);
+   }
+   
+   .podcast_title{
+     font-size: 2.8rem;
+     margin: .1rem 0 .1rem;
+   }
+ 
+   .podcast_info p{
+     font-size: 130%;
+     font-weight: 200;
+   }
+ }
 
 .hed{
   width: 100%;
@@ -521,7 +546,7 @@ font-size: 8rem;
   padding: 0 1.5rem;
   background-color: #F1F1F1;
   margin-top: 8rem;
-  margin-bottom: 8rem;
+  margin-bottom: 18rem;
 }
 
 .women{
@@ -608,26 +633,31 @@ font-size: 8rem;
 
 @media screen and (max-width:768px){
   .women{
-   padding: 2.5rem;
-   flex-direction: column;
-  }
-
-  .women_img{
-    min-width: 100%;
-    max-width: 100%;
-    transform: translate(0,-8rem);
-  }
-
-  .women_title{
-    font-size: 2.8rem;
-    margin: .5rem 0 .2rem;
-  }
-
-  .women_info p{
-    font-size: 1.6rem;
-    font-weight: 600;
-  }
-}
+    padding: 2rem;
+    flex-direction: column;
+   }
+ 
+   .women_img{
+     min-width: 80%;
+     max-width: 80%;
+     height: 80%;
+   }  
+   .women_img{
+     min-width: 100%;
+     max-width: 100%;
+     transform: translate(0,-6rem);
+   }
+   
+   .women_title{
+     font-size: 2.8rem;
+     margin: .1rem 0 .1rem;
+   }
+ 
+   .women_info p{
+     font-size: 130%;
+     font-weight: 200;
+   }
+ }
 
 
 
@@ -722,24 +752,34 @@ font-size: 8rem;
 
 @media screen and (max-width:768px){
   .beach{
-   padding: 2.5rem;
-   flex-direction: column;
+    padding: 2rem;
+    flex-direction: column;
+   }
+ 
+   .beach_img{
+     min-width: 80%;
+     max-width: 80%;
+     height: 80%;
+   } 
+   .beach_img::before{
+    width: 100%;
+    height: 100%;
+    border-radius: 1.5rem;
   }
-
-  .beach_img{
-    min-width: 100%;
-    max-width: 100%;
-    transform: translate(0,-8rem);
-  }
-
-  .beach_title{
-    font-size: 2.8rem;
-    margin: .5rem 0 .2rem;
-  }
-
-  .beach_info p{
-    font-size: 1.6rem;
-    font-weight: 600;
-  }
-}
-
+   
+   .beach_img{
+     min-width: 100%;
+     max-width: 100%;
+     transform: translate(0,-6rem);
+   }
+   
+   .beach_title{
+     font-size: 2.8rem;
+     margin: .1rem 0 .1rem;
+   }
+ 
+   .beach_info p{
+     font-size: 130%;
+     font-weight: 200;
+   }
+ }
