--- a/events/css/style.css
+++ b/events/css/style.css
@@ -675,7 +675,7 @@ font-size: 8rem;
   width: 100%;
   max-width: 130rem;
   padding: 5rem;
-  background-image: linear-gradient(to right,#09C3DB 0%, 	#8a0959 80%);
+  background-image: linear-gradient(to right,#4E65FF 0%, 	#62b0bc 80%);
   box-shadow: 0 1.4rem 8rem rgba(0,0,0,.2);
   display: flex;
   align-items: center;
