--- a/projectpillar/src/css/style.scss
+++ b/projectpillar/src/css/style.scss
@@ -5,6 +5,8 @@
 @import "./countdown";
 @import "./scrollDownArrow";
 @import "../../../common/css/footer.scss";
+@import "./sponsor";
+
 :root {
   --background-color: #f7f7f7;
   --font-blk: #292f36;
@@ -63,13 +65,28 @@ section:nth-of-type(3) {
 }
 
 // Sponsors section:nth-of-type(4)
-// section:nth-of-type(4) {
-//   height: 50vh;
-//   background-color: #ffffff;
-// }
+section:nth-of-type(4) {
+  height: 50vh;
+  background-color: #ffffff;
+  padding-inline: 100px;
+  padding-block: 60px;
+  overflow: hidden;
+  position: relative;
+
+  @media screen and (max-width: 1100px) {
+    padding-inline: 32px;
+    padding-block: 50px;
+  }
+
+  @media screen and (max-width: 430px) {
+    height: 65vh;
+    padding-inline: 16px;
+    padding-block: 35px;
+  }
+}
 
 // Incentives section:nth-of-type(5)
-section:nth-of-type(4) {
+section:nth-of-type(5) {
   height: auto;
 }
 
@@ -110,7 +127,7 @@ section:nth-of-type(4) {
     width: 75vw;
   }
 
-  @media screen and (max-width: 900px) {
+  @media screen and (max-width: 1100px) {
     width: 100vw;
   }
 }
@@ -210,7 +227,7 @@ section:nth-of-type(4) {
     }
   }
   // timeline section :nth-of-type(5)
-  section:nth-of-type(4) {
+  section:nth-of-type(5) {
     height: auto;
   }
 
