--- a/projectpillar/src/css/style.css
+++ b/projectpillar/src/css/style.css
@@ -1122,6 +1122,21 @@ footer {
   gap: 0 5em;
 }
 
+@media screen and (max-width: 900px) {
+  .sponsor-img-container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: column nowrap;
+            flex-flow: column nowrap;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+  }
+  .sponsor-img-container .sponsor-img {
+    width: 110px;
+  }
+}
+
 @media screen and (max-width: 450px) {
   .sponsor-img-container {
     height: 100%;
