--- a/projectpillar/src/css/_sponsor.scss
+++ b/projectpillar/src/css/_sponsor.scss
@@ -1,4 +1,6 @@
 .sponsor-img-container {
+  height: 100%;
+  width: 100%;
   display: flex;
   flex-flow: row nowrap;
   align-items: center;
@@ -127,8 +129,18 @@
   // display: none;
   // position: absolute;
   // top: 50%;
+
+  @media screen and (max-width: 1100px) {
+    &:nth-of-type(1) {
+      margin-top: 5%;
+    }
+  }
+
   @media screen and (max-width: 430px) {
     width: 0%;
+    &:nth-of-type(1) {
+      margin-top: 5%;
+    }
   }
 }
 
