--- a/projectpillar/src/css/style.css
+++ b/projectpillar/src/css/style.css
@@ -1106,6 +1106,8 @@ footer {
 }
 
 .sponsor-img-container {
+  height: 100%;
+  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1272,9 +1274,18 @@ footer {
   width: 100%;
 }
 
+@media screen and (max-width: 1100px) {
+  .sponsor-card:nth-of-type(1) {
+    margin-top: 5%;
+  }
+}
+
 @media screen and (max-width: 430px) {
   .sponsor-card {
     width: 0%;
+  }
+  .sponsor-card:nth-of-type(1) {
+    margin-top: 5%;
   }
 }
 
@@ -1354,16 +1365,17 @@ section:nth-of-type(3) h1 {
 }
 
 section:nth-of-type(4) {
-  height: 50vh;
+  height: 450px;
   background-color: #ffffff;
   padding-inline: 100px;
-  padding-block: 60px;
+  padding-block: 70px;
   overflow: hidden;
   position: relative;
 }
 
 @media screen and (max-width: 1100px) {
   section:nth-of-type(4) {
+    height: 525px;
     padding-inline: 32px;
     padding-block: 50px;
   }
@@ -1371,7 +1383,7 @@ section:nth-of-type(4) {
 
 @media screen and (max-width: 430px) {
   section:nth-of-type(4) {
-    height: 65vh;
+    height: 500px;
     padding-inline: 16px;
     padding-block: 35px;
   }
