--- a/projectpillar/src/css/style.scss
+++ b/projectpillar/src/css/style.scss
@@ -66,20 +66,21 @@ section:nth-of-type(3) {
 
 // Sponsors section:nth-of-type(4)
 section:nth-of-type(4) {
-  height: 50vh;
+  height: 450px;
   background-color: #ffffff;
   padding-inline: 100px;
-  padding-block: 60px;
+  padding-block: 70px;
   overflow: hidden;
   position: relative;
 
   @media screen and (max-width: 1100px) {
+    height: 525px;
     padding-inline: 32px;
     padding-block: 50px;
   }
 
   @media screen and (max-width: 430px) {
-    height: 65vh;
+    height: 500px;
     padding-inline: 16px;
     padding-block: 35px;
   }
