--- a/projectpillar/src/css/_sponsor.scss
+++ b/projectpillar/src/css/_sponsor.scss
@@ -9,6 +9,7 @@
   @media screen and (max-width: 900px) {
     flex-flow: column nowrap;
     justify-content: flex-start;
+
     .sponsor-img {
       width: 110px;
     }
@@ -22,6 +23,7 @@
     }
   }
 }
+
 .sponsor-img {
   height: auto;
   width: 185px;
@@ -132,7 +134,11 @@
 
   @media screen and (max-width: 1100px) {
     &:nth-of-type(1) {
-      margin-top: 5%;
+      margin-top: 3%;
+    }
+    &:nth-of-type(2),
+    &:nth-of-type(3) {
+      margin-top: 1.2%;
     }
   }
 
@@ -150,5 +156,27 @@
   justify-content: flex-start;
   position: absolute;
   top: 0;
-  transition: transform 1.5s ease-in;
+  transition: transform 2s ease-in-out;
+}
+
+.canara_bank {
+  height: auto;
+  width: 250px;
+  @media screen and (max-width: 900px) {
+    width: 170px;
+  }
+  @media screen and (max-width: 430px) {
+    width: 200px;
+  }
+}
+
+.four-sponsor {
+  @media screen and (max-width: 900px) {
+    flex-flow: row wrap;
+    justify-content: space-evenly;
+    margin-top: 15px;
+    .sponsor-img {
+      width: 110px;
+    }
+  }
 }
