--- a/projectpillar/src/css/style.css
+++ b/projectpillar/src/css/style.css
@@ -1276,7 +1276,10 @@ footer {
 
 @media screen and (max-width: 1100px) {
   .sponsor-card:nth-of-type(1) {
-    margin-top: 5%;
+    margin-top: 3%;
+  }
+  .sponsor-card:nth-of-type(2), .sponsor-card:nth-of-type(3) {
+    margin-top: 1.2%;
   }
 }
 
@@ -1299,10 +1302,43 @@ footer {
           justify-content: flex-start;
   position: absolute;
   top: 0;
-  -webkit-transition: -webkit-transform 1.5s ease-in;
-  transition: -webkit-transform 1.5s ease-in;
-  transition: transform 1.5s ease-in;
-  transition: transform 1.5s ease-in, -webkit-transform 1.5s ease-in;
+  -webkit-transition: -webkit-transform 2s ease-in-out;
+  transition: -webkit-transform 2s ease-in-out;
+  transition: transform 2s ease-in-out;
+  transition: transform 2s ease-in-out, -webkit-transform 2s ease-in-out;
+}
+
+.canara_bank {
+  height: auto;
+  width: 250px;
+}
+
+@media screen and (max-width: 900px) {
+  .canara_bank {
+    width: 170px;
+  }
+}
+
+@media screen and (max-width: 430px) {
+  .canara_bank {
+    width: 200px;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .four-sponsor {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: row wrap;
+            flex-flow: row wrap;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+    margin-top: 15px;
+  }
+  .four-sponsor .sponsor-img {
+    width: 110px;
+  }
 }
 
 :root {
@@ -1383,7 +1419,7 @@ section:nth-of-type(4) {
 
 @media screen and (max-width: 430px) {
   section:nth-of-type(4) {
-    height: 500px;
+    height: 600px;
     padding-inline: 16px;
     padding-block: 35px;
   }
