countdown header title change

--- a/projectpillar/src/css/style.scss
+++ b/projectpillar/src/css/style.scss
@@ -102,7 +102,7 @@ section:nth-of-type(5) {
 .counter-wrapper {
   height: auto;
   width: 100%;
-  margin-top: 1%;
+  margin-block: 25px;
   // background-color: pink;
   text-align: center;
   h2 {
