--- a/foodfiesta/asset/css/style.css
+++ b/foodfiesta/asset/css/style.css
@@ -164,7 +164,6 @@ nav .links a {
 
 .spon{
   width: 100%;
-  height: 80vh;
   display: grid;
   place-items: center;
   background: maroon;
@@ -177,9 +176,10 @@ nav .links a {
 }
 
 .spon-wrap h1{
-  font-size: 60px;
+  font-size: 5rem;
   color: whitesmoke;
-  margin-bottom: 60px;
+  margin-bottom: 3rem;
+  margin-top: 3rem;
 }
 
 .spon-in {
@@ -193,8 +193,9 @@ nav .links a {
 .spon-in ul li{
   list-style: none;
   display: inline-block;
-  width: 300px;
-  height: 300px;
+  width: 20rem;
+  height: 20rem;
+  margin-bottom: 3rem;
   position: relative;
   overflow: hidden;
   cursor: pointer;
@@ -209,19 +210,19 @@ nav .links a {
 
 @media(max-width: 1120px){
   .spon-in ul li {
-    width: 150px;
-  height: 150px;
+    width: 30%;
+  height: 30%;
   }
 }
 
 @media(max-width: 530px){
   .spon-in ul li {
-    width: 110px;
-  height: 110px;
+    width: 50%;
+  height: 40%;
   }
 
   .spon-wrap h1{
-    font-size: 30px;
+    font-size: 300%;
     color: whitesmoke;
   }
 }
