--- a/foodfiesta/asset/css/style.css
+++ b/foodfiesta/asset/css/style.css
@@ -198,6 +198,7 @@ nav .links a {
   position: relative;
   overflow: hidden;
   cursor: pointer;
+  margin-bottom: 3rem;
   transition: .10s;
 }
 .spon-in ul li img{
