--- a/projectpillar/src/css/_animatedbackground.scss
+++ b/projectpillar/src/css/_animatedbackground.scss
@@ -14,7 +14,7 @@
   list-style: none;
   width: 20px;
   height: 20px;
-  background: #e9f1ff;
+  background: #f0f6ff;
   animation: animate 25s linear infinite;
   bottom: -150px;
 }
