--- a/projectpillar/src/css/_scrollDownArrow.scss
+++ b/projectpillar/src/css/_scrollDownArrow.scss
@@ -1,7 +1,6 @@
 .scroll-down {
   width: 100%;
   text-align: center;
-  margin-top: 4%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -9,12 +8,18 @@
   color: rgb(203, 203, 203);
   font-weight: 400;
   font-size: 1.1em;
+  position: absolute;
+  bottom: 5rem;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 1;
   a,
   a:visited {
     color: rgb(203, 203, 203);
   }
   @media screen and (min-width: 1000px) and (max-height: 775px) {
-    margin-top: 0.5%;
+  }
+  @media screen and (max-height: 900px) {
   }
 }
 
