--- a/projectpillar/src/css/style.scss
+++ b/projectpillar/src/css/style.scss
@@ -6,6 +6,7 @@
 @import "./scrollDownArrow";
 @import "../../../common/css/footer.scss";
 @import "./sponsors";
+@import "./gallery";
 
 :root {
   --background-color: #f7f7f7;
