--- a/projectpillar/src/css/_sponsors.scss
+++ b/projectpillar/src/css/_sponsors.scss
@@ -48,10 +48,19 @@
 .sponsor-img {
   height: auto;
   width: 10rem;
+
+  @media screen and (max-width: 425px) {
+    width: 7.5rem;
+  }
 }
 .rcf-logo {
   width: 8rem;
   height: 10rem;
+
+  @media screen and (max-width: 425px) {
+    width: 6rem;
+    height: 8rem;
+  }
 }
 
 .sponsor-img-container {
@@ -62,11 +71,14 @@
   align-items: center;
 
   @media screen and (max-width: 450px) {
-    gap: 2rem 5rem;
+    gap: 2rem;
   }
 
   .sponsor-img {
     width: 12rem;
+    @media screen and (max-width: 450px) {
+      width: 9rem;
+    }
   }
 }
 .food-partner {
@@ -76,4 +88,7 @@
 .xhair-logo {
   height: 9.2rem;
   width: auto;
+  @media screen and (max-width: 450px) {
+    height: 6.2rem;
+  }
 }
