--- a/projectpillar/src/css/_countdown.scss
+++ b/projectpillar/src/css/_countdown.scss
@@ -7,6 +7,7 @@
   margin-top: 2%;
   gap: 2em;
   width: 100%;
+  transition: all 1s ease-in;
 
   @media screen and (max-width: 1100px) {
     padding: 0px 32px;
