--- a/projectpillar/src/css/_scrollDownArrow.scss
+++ b/projectpillar/src/css/_scrollDownArrow.scss
@@ -9,17 +9,26 @@
   font-weight: 400;
   font-size: 1.1em;
   position: absolute;
-  bottom: 5rem;
+  bottom: 4rem;
   left: 50%;
-  transform: translateX(-50%);
+  transform: translateX(-50%) scale(0.75);
+
   z-index: 1;
   a,
   a:visited {
     color: rgb(203, 203, 203);
   }
   @media screen and (min-width: 1000px) and (max-height: 775px) {
+    bottom: 0rem;
+    transform: translateX(-50%) scale(0.6);
   }
   @media screen and (max-height: 900px) {
+    bottom: 4rem;
+  }
+  p {
+    @media screen and (min-width: 1000px) and (max-height: 650px) {
+      display: none;
+    }
   }
 }
 
@@ -46,10 +55,6 @@
   }
   @media screen and (max-width: 768px) {
     transform: scale(0.75);
-  }
-
-  @media screen and (min-width: 1000px) and (max-height: 650px) {
-    display: none;
   }
 }
 
