--- a/projectpillar/src/css/style.css
+++ b/projectpillar/src/css/style.css
@@ -644,6 +644,8 @@ nav {
   margin-top: 2%;
   gap: 2em;
   width: 100%;
+  -webkit-transition: all 1s ease-in;
+  transition: all 1s ease-in;
 }
 
 @media screen and (max-width: 1100px) {
@@ -869,16 +871,36 @@ nav {
   font-weight: 400;
   font-size: 1.1em;
   position: absolute;
-  bottom: 5rem;
+  bottom: 4rem;
   left: 50%;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
+  -webkit-transform: translateX(-50%) scale(0.75);
+          transform: translateX(-50%) scale(0.75);
   z-index: 1;
 }
 
 .scroll-down a,
 .scroll-down a:visited {
   color: #cbcbcb;
+}
+
+@media screen and (min-width: 1000px) and (max-height: 775px) {
+  .scroll-down {
+    bottom: 0rem;
+    -webkit-transform: translateX(-50%) scale(0.6);
+            transform: translateX(-50%) scale(0.6);
+  }
+}
+
+@media screen and (max-height: 900px) {
+  .scroll-down {
+    bottom: 4rem;
+  }
+}
+
+@media screen and (min-width: 1000px) and (max-height: 650px) {
+  .scroll-down p {
+    display: none;
+  }
 }
 
 .mouse {
@@ -910,12 +932,6 @@ nav {
   .mouse {
     -webkit-transform: scale(0.75);
             transform: scale(0.75);
-  }
-}
-
-@media screen and (min-width: 1000px) and (max-height: 650px) {
-  .mouse {
-    display: none;
   }
 }
 
@@ -1547,6 +1563,10 @@ h1 {
   color: var(--font-blk);
 }
 
+[data-counter-title] {
+  text-transform: capitalize;
+}
+
 section {
   width: 100%;
   padding: 4.375rem 6.25rem;
@@ -1650,12 +1670,15 @@ section:nth-of-type(5) {
   }
 }
 
-.hero-img {
-  height: auto;
-  width: 50rem;
-  -o-object-fit: contain;
-     object-fit: contain;
-  z-index: 1;
+.home-wrapper {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+.hero-wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1665,12 +1688,21 @@ section:nth-of-type(5) {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  width: 100%;
+}
+
+.hero-img {
+  height: auto;
+  width: 50rem;
+  -o-object-fit: contain;
+     object-fit: contain;
+  z-index: 1;
 }
 
 @media screen and (min-width: 1000px) and (max-height: 775px) {
   .hero-img {
     display: block;
-    height: 17.2rem;
+    width: 30rem;
   }
 }
 
